feat:active bookings from guesthouse

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,6 +11,9 @@
         <li>
           <%= link_to 'Reservas', guesthouse_owner_bookings_path %>
         </li>
+        <li>
+          <%= link_to 'Estadias Ativas', active_bookings_path %>
+        </li>
       <% end %>
       <% if current_user&.guest? %>
         <li>
