--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,58 +1,7 @@
 <article>
   <h2>Reservas</h2>
-
-  <table>
-    <caption>Dados Básicos das Reservas</caption>
-    <thead>
-    <tr>
-      <th><%= Booking.human_attribute_name(:reservation_code) %></th>
-      <th><%= Booking.human_attribute_name(:status) %></th>
-      <th><%= Booking.human_attribute_name(:check_in_date) %></th>
-      <th><%= Booking.human_attribute_name(:check_out_date) %></th>
-      <th><%= Booking.human_attribute_name(:room) %></th>
-      <th><%= Guesthouse.model_name.human %></th>
-      <th><%= Booking.human_attribute_name(:total_price) %></th>
-      <th>Ações</th>
-    </tr>
-    </thead>
-    <tbody>
-    <% if @bookings.nil? || @bookings&.empty? %>
-      <tr>
-        <td colspan="8" style="color: red">Nenhuma reserva encontrada</td>
-      </tr>
-    <% end %>
-    <% @bookings&.each do |booking| %>
-      <tr>
-        <td><%= booking.reservation_code %></td>
-        <td><%= t("activerecord.attributes.booking.statuses.#{booking.status}") %></td>
-        <td><%= booking.check_in_date.strftime('%d/%m/%Y') %></td>
-        <td><%= booking.check_out_date.strftime('%d/%m/%Y') %></td>
-        <td><%= booking.room.name %></td>
-        <td><%= booking.room.guesthouse.brand_name %></td>
-        <td><%= number_to_currency(booking.total_price, unit: 'R$', separator: ',', delimiter: '.') %></td>
-
-        <td>
-          <p>
-            <%= link_to 'Detalhes', booking_path(booking) %>
-          </p>
-          <% if current_user&.guest? && request.path == bookings_path %>
-            <p>
-              <%= button_to('Cancelar', cancel_booking_path(booking), method: :patch,
-                          data: { confirm: 'Pode cancelar?' }) if booking.pending? %>
-            </p>
-          <% elsif current_user&.guesthouse_owner? && request.path == guesthouse_owner_bookings_path %>
-            <p>
-              <%= button_to('Cancelar', cancel_by_guesthouse_owner_booking_path(booking), method: :patch,
-                            data: { confirm: 'Pode cancelar?' }) if booking.pending? %>
-            </p>
-            <p>
-              <%= button_to 'Check-In', check_in_booking_path(booking), method: :patch,
-                            data: { confirm: 'Pode fazer o check-in?' } if booking.pending? %>
-            </p>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-    </tbody>
-  </table>
+  <% if @bookings.nil? || @bookings&.empty? %>
+      <p style="color: red">Nenhuma reserva encontrada</p>
+  <% end %>
+  <%= render 'bookings/bookings', bookings: @bookings%>
 </article>
