feat:user sees finished and pending bookings

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -67,4 +67,8 @@
       <dd><%= t(@booking&.payment_method) %></dd>
     </dl>
   <% end %>
+
+  <% if current_user&.guest? && current_user.guest.bookings.exists?(@booking&.id)%>
+    <h3>Avalie sua Estadia</h3>
+  <% end %>
 </article>
