feat:users see review responses
in booking details

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -95,4 +95,11 @@
       <% end %>
     </div>
   <% end %>
+
+  <% unless @booking.review.nil? %>
+    <hr>
+
+    <h3><%= Review.model_name.human %></h3>
+    <%= render 'shared/reviews', reviews: [@booking.review] %>
+  <% end %>
 </article>
