--- a/app/views/shared/_reviews.html.erb
+++ b/app/views/shared/_reviews.html.erb
@@ -1,31 +1,32 @@
 <% if reviews.empty? %>
   <p>Ainda não há <%= Review.model_name.human(count: reviews.count) %> para esta <%= Guesthouse.model_name.human %>.</p>
-<% end %>
-<ul>
-  <% reviews.each do |review| %>
-    <li>
-      <dl>
-        <dt><strong><%= Guest.model_name.human %>:</strong></dt>
-        <dd><%= review.guest.name %></dd>
-        <dt><strong><%= Review.human_attribute_name(:comment) %>:</strong></dt>
-        <dd><%= review.comment %></dd>
-        <dt><strong><%= Review.human_attribute_name(:rating) %>:</strong></dt>
-        <dd>
-          <%= t("activerecord.attributes.review.ratings.#{review.rating}") %> - <%= review.rating_before_type_cast %>
-        </dd>
-        <% unless review.response.nil? %>
-          <%  if current_user&.guest? && current_user.guest.reviews.exists?(review.id) ||
-            current_user&.guesthouse_owner? && current_user.guesthouse_owner.guesthouse == guesthouse  %>
-            <dt><strong><%=  Review.human_attribute_name(:response)  %></strong></dt>
-            <dd><%= review.response %></dd>
-          <%  end %>
+<% else %>
+  <ul>
+    <% reviews.each do |review| %>
+      <li>
+        <dl>
+          <dt><strong><%= Guest.model_name.human %>:</strong></dt>
+          <dd><%= review&.guest&.name %></dd>
+          <dt><strong><%= Review.human_attribute_name(:comment) %>:</strong></dt>
+          <dd><%= review&.comment %></dd>
+          <dt><strong><%= Review.human_attribute_name(:rating) %>:</strong></dt>
+          <dd>
+            <%= t("activerecord.attributes.review.ratings.#{review&.rating}") %> - <%= review&.rating_before_type_cast %>
+          </dd>
+          <% unless review.response&.nil? %>
+            <%  if current_user&.guest? && current_user.guest.reviews.exists?(review.id) ||
+              current_user&.guesthouse_owner? && current_user.guesthouse_owner.guesthouse == guesthouse  %>
+              <dt><strong><%= Review.human_attribute_name(:response) %></strong>:</dt>
+              <dd><%= review.response %></dd>
+            <%  end %>
+          <% end %>
+        </dl>
+        <% if current_user&.guesthouse_owner? && current_user.guesthouse_owner.guesthouse == guesthouse %>
+          <p>
+            <%= link_to 'Responder Avaliação', respond_review_path(review) %>
+          </p>
         <% end %>
-      </dl>
-      <% if current_user&.guesthouse_owner? && current_user.guesthouse_owner.guesthouse == guesthouse %>
-        <p>
-          <%= link_to 'Responder Avaliação', respond_review_path(review) %>
-        </p>
-      <% end %>
-    </li>
-  <% end %>
-</ul>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
