--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -29,7 +29,7 @@
     <dt><strong><%= Booking.human_attribute_name(:total_price) %>:</strong></dt>
     <dd><%= number_to_currency(@booking&.total_price, unit: 'R$', separator: ',', delimiter: '.') %></dd>
 
-    <dt><strong><%= PaymentMethod.model_name.human %>:</strong></dt>
+    <dt><strong><%= PaymentMethod.model_name.human(count: @booking&.room&.guesthouse&.payment_methods&.count) %>:</strong></dt>
     <dd>
       <ul>
         <% @booking&.room&.guesthouse&.payment_methods&.each do |payment_method| %>
