feat:add images for guesthouses

--- a/app/views/guesthouses/_form.html.erb
+++ b/app/views/guesthouses/_form.html.erb
@@ -121,6 +121,14 @@
     <% end %>
   </fieldset>
 
+  <fieldset>
+    <legend>Adicionar Imagens</legend>
+    <p>
+      <%= f.label :images %>
+      <%= f.file_field :images, multiple: true, accept: 'image/png,image/jpeg' %>
+    </p>
+  </fieldset>
+
   <p>
     <%= f.submit %>
   </p>
