feat:user deletes image from guesthouse

--- a/app/views/guesthouses/show.html.erb
+++ b/app/views/guesthouses/show.html.erb
@@ -42,7 +42,7 @@
 
       <ul>
         <% @guesthouse.images.each do |image| %>
-          <li><%= image_tag image, width: '300' %></li>
+          <li><%= image_tag image, width: '300', alt: "inn outside overview" %></li>
         <% end %>
       </ul>
     </section>
