--- a/app/views/guesthouses/_form.html.erb
+++ b/app/views/guesthouses/_form.html.erb
@@ -139,8 +139,8 @@
     <ul>
       <% guesthouse.images.each do |image| %>
         <li>
-          <%= image_tag image, width: '100' %>
-          <%= button_to 'Remover' %>
+          <%= image_tag image, width: '100', alt: "inn outside overview" %>
+          <%= button_to 'Remover', guesthouse_image_path(guesthouse, image), method: :delete %>
         </li>
       <% end %>
     </ul>
