--- a/app/views/guesthouses/show.html.erb
+++ b/app/views/guesthouses/show.html.erb
@@ -36,17 +36,7 @@
 
   <hr>
 
-  <% if @guesthouse.images.attached? %>
-    <section>
-      <h3>Fotos</h3>
-
-      <ul>
-        <% @guesthouse.images.each do |image| %>
-          <li><%= image_tag image, width: '300', alt: "inn outside overview" %></li>
-        <% end %>
-      </ul>
-    </section>
-  <% end %>
+  <%= render 'shared/photos', instance_model: @guesthouse %>
 
   <section>
     <h3>Algumas Avaliações</h3>
